# lettermint-rs

./: .env.example  CHANGELOG.md  Cargo.toml  README.md
src/: client.rs  lib.rs  reqwest.rs  webhook.rs
src/api/: mod.rs  ping.rs
src/api/email/: batch.rs  mod.rs  send.rs
src/testing/: emails.rs
tests/: e2e.rs  integration.rs
