[package]
name = "lettermint-rs"
description = "Lettermint email service client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AndreRoelofs/lettermint-rs"
homepage = "https://github.com/AndreRoelofs/lettermint-rs"
documentation = "https://docs.rs/lettermint-rs"
keywords = ["lettermint", "email", "e-mail", "http"]
categories = ["api-bindings", "email", "web-programming::http-client"]
version = "0.3.0"
edition = "2024"
exclude = ["manifest.scm"]

[dependencies]
bytes = { version = "1.6" }
http = { version = "1.1" }
hmac = { version = "0.13" }
sha2 = { version = "0.11" }
hex = { version = "0.4" }
reqwest = { version = "0.13", optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = { version = "2.0" }
tracing = { version = "0.1" }
bon = { version = "3" }
secrecy = { version = "0.10", features = ["serde"] }

[features]
default = []
reqwest = ["dep:reqwest"]
reqwest-native-tls = ["reqwest", "reqwest/native-tls"]
reqwest-rustls = ["reqwest", "reqwest/rustls"]

[dev-dependencies]
base64 = { version = "0.22" }
dotenvy = { version = "0.15" }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
wiremock = { version = "0.6" }
lettermint-rs = { path = ".", features = ["reqwest", "reqwest-rustls"] }
